--- a/src/app/student-application-form/student-application-form.component.html
+++ b/src/app/student-application-form/student-application-form.component.html
@@ -5,12 +5,12 @@
 
 <form>
   <div>
-    <label for="division">
-      <select class="form-control" id="division" required
-              [(ngModel)]="model.division" name="division"
+    <label for="level">
+      <select class="form-control" id="level" required
+              [(ngModel)]="model.level" name="level"
               #division="ngModel">
-        <option *ngFor="let divis of divisions" 
-          value="divis">{{divis}}</option></select>
+        <option *ngFor="let level of levels" 
+          value="level">{{level}}</option></select>
     </label>
   </div>
 </form>
