--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h2>SMS and WEB based school admission system</h2>
-<div class="header-bar"></div>
+<div class="header-bar">My new app</div>
 <nav>
   <a href="#">Admission Circular</a>
   <a href="#">Circular for Dhaka</a>
