added admit card

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,8 @@
   <!-- <a routerLink="" routerLinkActive="active">Admission Circular</a>
   <a routerLink="" routerLinkActive="active">Circular for Dhaka</a> -->
   <a routerLink="/form" routerLinkActive="active">Student Application Form</a>
-  <!-- <a routerLink="" routerLinkActive="active">Get Admit Card</a> -->
   <a routerLink="/school-authority-login" routerLinkActive="active">School/Authority Login</a>
+  <a routerLink="/admit" routerLinkActive="active">Get Admit Card</a>
   <!-- <a routerLink="" routerLinkActive="active">Software User Manual</a> -->
 </nav>
 
