school icon added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <h2>SMS and WEB based school admission system</h2>
 <div class="header-bar"></div>
+
 <nav>
   <!-- <a routerLink="" routerLinkActive="active">Admission Circular</a>
   <a routerLink="" routerLinkActive="active">Circular for Dhaka</a> -->
@@ -8,5 +9,6 @@
   <a routerLink="/admit" routerLinkActive="active">Get Admit Card</a>
   <!-- <a routerLink="" routerLinkActive="active">Software User Manual</a> -->
 </nav>
-
+<br><br><br>
+<img src="../assets/School-building.jpg" alt="School Building" width="100%" height="100%">
 <router-outlet></router-outlet>
